--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+boto3 = "*"
+boto3-stubs = {extras = ["essential","ses"], version = "*"}
 click = "*"
 sentry-sdk = "*"
 
 [dev-packages]
 black = "*"
 coveralls = "*"
+moto="*"
 mypy = "*"
 pre-commit = "*"
 pytest = "*"
