Implement SimpleCSV 'base' workflow
Why these changes are being introduced:
* DSC needs to support a workflow where metadata is provided
via a CSV file and bitstreams are uploaded to an S3 bucket
by stakeholders.

How this addresses that need:
* Define SimpleCSV 'base' workflow class
* Update S3Client.get_files_iter to support filters
* Add 'smart_open' as a dependency

Side effects of this change:
* None

Relevant ticket(s):
* https://mitlibraries.atlassian.net/browse/IN-1095

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ boto3 = "*"
 boto3-stubs = {extras = ["essential","ses"], version = "*"}
 click = "*"
 sentry-sdk = "*"
+smart_open = {extras = ["s3"], version = "*"}
 
 [dev-packages]
 black = "*"
