--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ disallow_untyped_calls = true
 disallow_untyped_defs = true
 exclude = ["tests/"]
 
+[[tool.mypy.overrides]]
+module = ["smart_open"]
+ignore_missing_imports = true
+
 [tool.pytest.ini_options]
 log_level = "INFO"
 
@@ -26,8 +30,6 @@ show-fixes = true
 select = ["ALL", "PT"]
 ignore = [
     # default
-    "ANN101", 
-    "ANN102", 
     "C90",
     "COM812",
     "D100",
