Build framework for creating reports
Why these changes are being introduced:
* The app requires a framework for creating reports
that summarize results from DSC workflow runs. This framework
should support creating different reports for the three main
DSC CLI commands: reconcile, submit, and finalize.

How this addresses that need:
* Add boolean flag option 'create-and-send-report' to main CLI command
* Apply 'create-and-send-report' to 'finalize' CLI command
* Add report module for creating email data (i.e., subject heading,
file attachments, message body)
* Add HTML and plain-text templates (rendered by Jinja)
* Update SESClient to render message body in emails and accept multiple
attachments
* Create WorkflowEvents dataclass to capture useful report data
during execution of Workflow methods (replaces 'report_data' attribute)
* Add test module for reporting framework
* Update tests as needed

Side effects of this change:
* As of this writing, the existing report templates are quite simple,
with the goal of getting to an minimum viable product. It would be good
to include in coming documentation what email recipients can expect
in the emailed report.

Relevant ticket(s):
* https://mitlibraries.atlassian.net/browse/IN-1157

--- a/Pipfile
+++ b/Pipfile
@@ -7,12 +7,14 @@ name = "pypi"
 boto3 = "*"
 boto3-stubs = {extras = ["essential","ses"], version = "*"}
 click = "*"
+jinja2 = "*"
 sentry-sdk = "*"
 smart_open = {extras = ["s3"], version = "*"}
 
 [dev-packages]
 black = "*"
 coveralls = "*"
+freezegun = "*"
 moto="*"
 mypy = "*"
 pre-commit = "*"
