Add some flexibility to the SimpleCSV workflow
Why these changes are being introduced:
* Rework SimpleCSV methods to better handle modest variations
in provided metadata CSV files (field names) and
bitstreams (filenames).

How this addresses that need:
* Define SCCS._get_item_identifier to retrieve identifier from accepted
range of values
* Remove 'item_identifier' from metadata mapping JSON files
* Rework SimpleCSV reconcile methods to match metadata and bitstreams
based on presence of item identifier in bitstream filename;
remove code to retrieve item identifiers from bitstream filenames;
for bitstreams without metadata, indicate filenames instead
* Use pandas to read metadata CSV file
* Add and update unit tests

Side effects of this change:
* The column in the metadata CSV file that contains the item identifier
can take on any name as long as it is listed in the 'source_field_name'
for the 'item_identifier' entry in the metadata mapping JSON file.

Relevant ticket(s):
* https://mitlibraries.atlassian.net/browse/IN-1186

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ boto3 = "*"
 boto3-stubs = {extras = ["essential","ses"], version = "*"}
 click = "*"
 jinja2 = "*"
+pandas = "*"
 sentry-sdk = "*"
 smart_open = {extras = ["s3"], version = "*"}
 
@@ -17,6 +18,7 @@ coveralls = "*"
 freezegun = "*"
 moto="*"
 mypy = "*"
+pandas-stubs = "*"
 pre-commit = "*"
 pytest = "*"
 ruff = "*"
