Improve methods for processing result messages
Why these changes are being introduced:
* Clear invalid result messages from the output SQS queue and
clarify validation rules for DSS result messages

How this addresses that need:
* Define JSON Schemas to validate content of 'MessageAttributes'
and 'Body' of DSS result messages
* Create a method on base Workflow class for validating and
parsing result messages

Side effects of this change:
* None

Relevant ticket(s)
* https://mitlibraries.atlassian.net/browse/IN-1323

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ boto3 = "*"
 boto3-stubs = {extras = ["essential","ses"], version = "*"}
 click = "*"
 jinja2 = "*"
+jsonschema = "*"
 pandas = "*"
 sentry-sdk = "*"
 smart_open = {extras = ["s3"], version = "*"}
@@ -23,6 +24,7 @@ pip-audit = "*"
 pre-commit = "*"
 pytest = "*"
 ruff = "*"
+types-jsonschema = "*"
 
 [requires]
 python_version = "3.12"
