--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,8 @@ ignore = [
     "D107",
     "EM101",
     "EM102",
-    "G004", 
+    "G004",
+    "ISC001", 
     "N812", 
     "PLR0912",
     "PLR0913", 
