--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -1,10 +1,10 @@
-### This is the Terraform-generated dev-build.yml workflow for the        ###
-### dspace-submission-composer app repository                             ###
+### This is the Terraform-generated dev-build.yml workflow for the        ### 
+### dspace-submission-composer-dev app repository.                        ###
 
-### If this is a Lambda repo, uncomment the FUNCTION line at the end of the document ###
-
-### If the container requires any additional pre-build commands, uncomment
-### and edit the PREBUILD line at the end of the document.
+### If this is a Lambda repo, uncomment the FUNCTION line at the end of   ### 
+### the document. If the container requires any additional pre-build      ### 
+### commands, uncomment and edit the PREBUILD line at the end of the      ###
+### document.                                                             ###
 
 name: Dev Container Build and Deploy
 on:
@@ -13,16 +13,48 @@ on:
         branches:
             - main
         paths-ignore:
-            - '.github/**'
+          - '.github/**'
 
+permissions:
+    id-token: write
+    contents: read
 jobs:
+    prep:
+        name: Prep for Build
+        runs-on: ubuntu-latest
+        outputs: 
+            cpuarch: ${{ steps.setarch.outputs.cpuarch }}
+        steps:
+          - name: Checkout
+            uses: actions/checkout@v5
+
+          - name: Set CPU Architecture
+            id: setarch
+            run: |
+                echo "### :abacus: Architecture Selection" >> $GITHUB_STEP_SUMMARY
+                if [[ -f .aws-architecture ]]; then
+                    ARCH=$(cat .aws-architecture)
+                    echo "\`$ARCH\` was read from \`.aws-architecture\` and passed to the deploy job." >> $GITHUB_STEP_SUMMARY
+                else
+                    ARCH="linux/amd64"
+                    echo "No \`.aws-architecture\` file, so default \`$ARCH\` was passed to the deploy job." >> $GITHUB_STEP_SUMMARY
+                fi
+                if [[ "$ARCH" != "linux/arm64" && "$ARCH" != "linux/amd64" ]]; then
+                    echo "$ARCH is INVALID architecture!"
+                    echo "$ARCH is INVALID architecture!" >> $GITHUB_STEP_SUMMARY
+                    exit 1
+                fi
+                echo "cpuarch=$ARCH" >> $GITHUB_OUTPUT
+
     deploy:
-        name: Dev Container Deploy
-        uses: mitlibraries/.github/.github/workflows/ecr-shared-deploy-dev.yml@main
+        needs: prep
+        name: Dev Deploy
+        uses: mitlibraries/.github/.github/workflows/ecr-multi-arch-deploy-dev.yml@main
         secrets: inherit
         with:
             AWS_REGION: "us-east-1"
             GHA_ROLE: "dspace-submission-composer-gha-dev"
             ECR: "dspace-submission-composer-dev"
-            # FUNCTION: ""
-            # PREBUILD:
+            CPU_ARCH: ${{ needs.prep.outputs.cpuarch }}
+    # FUNCTION: ""
+    # PREBUILD:
