--- a/.github/workflows/stage-build.yml
+++ b/.github/workflows/stage-build.yml
@@ -1,4 +1,4 @@
-### This is the Terraform-generated dev-build.yml workflow for the        ###
+### This is the Terraform-generated stage-build.yml workflow for the      ###
 ### dspace-submission-composer-stage app repository                       ###
 
 ### If this is a Lambda repo, uncomment the FUNCTION line at the end of   ###
@@ -8,21 +8,54 @@
 
 name: Stage Container Build and Deploy
 on:
-    workflow_dispatch:
-    push:
-        branches:
-            - main
-        paths-ignore:
-            - '.github/**'
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '.github/**'
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
-    deploy:
-        name: Stage Container Deploy
-        uses: mitlibraries/.github/.github/workflows/ecr-shared-deploy-stage.yml@main
-        secrets: inherit
-        with:
-            AWS_REGION: "us-east-1"
-            GHA_ROLE: "dspace-submission-composer-gha-stage"
-            ECR: "dspace-submission-composer-stage"
-            # FUNCTION: ""
-            # PREBUILD:
+  prep:
+    name: Prep for Build
+    runs-on: ubuntu-latest
+    outputs: 
+      cpuarch: ${{ steps.setarch.outputs.cpuarch }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Set CPU Architecture
+        id: setarch
+        run: |
+          echo "### :abacus: Architecture Selection" >> $GITHUB_STEP_SUMMARY
+          if [[ -f .aws-architecture ]]; then
+            ARCH=$(cat .aws-architecture)
+            echo "\`$ARCH\` was read from \`.aws-architecture\` and passed to the deploy job." >> $GITHUB_STEP_SUMMARY
+          else
+            ARCH="linux/amd64"
+            echo "No \`.aws-architecture\` file, so default \`$ARCH\` was passed to the deploy job." >> $GITHUB_STEP_SUMMARY
+          fi
+          if [[ "$ARCH" != "linux/arm64" && "$ARCH" != "linux/amd64" ]]; then
+            echo "$ARCH is INVALID architecture!"
+            echo "$ARCH is INVALID architecture!" >> $GITHUB_STEP_SUMMARY
+            exit 1
+          fi
+          echo "cpuarch=$ARCH" >> $GITHUB_OUTPUT
+
+  deploy:
+    needs: prep
+    name: Stage Deploy
+    uses: mitlibraries/.github/.github/workflows/ecr-multi-arch-deploy-stage.yml@main
+    secrets: inherit
+    with:
+        AWS_REGION: "us-east-1"
+        GHA_ROLE: "dspace-submission-composer-gha-stage"
+        ECR: "dspace-submission-composer-stage"
+        CPU_ARCH: ${{ needs.prep.outputs.cpuarch }}
+        # FUNCTION: ""
+        # PREBUILD: 
